--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "helicopter",
   "main": "./lib/helicopter",
-  "version": "0.6.0",
+  "version": "0.6.1",
   "description": "Helicopter is a keymap system with composability and ergonomics in mind. It provides a scalable way to define keybindgs, making them easy to remember and easy to use.",
-  "keywords": ["keyboard-layout", "keymap"],
+  "keywords": [
+    "keyboard-layout",
+    "keymap"
+  ],
   "repository": "https://github.com/welldan97/atom-helicopter",
   "license": "MIT",
   "engines": {
